Show timezone status in home page
Add a hint about setting it with `TZ` - which I've just tested and seems
to work correctly.

Fixes https://github.com/lutzky/trufotbot/issues/27
